@@ -1,3 +1,9 @@
+2010-06-10 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCpeeph.c,
+	  src/z80/peep.c:
+	  Improved canAssign().
+
 2010-06-07 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/port.h,
